# WeatherApp

./: .gitignore  CMakeLists.txt  README.md  locations.data  main.cpp  user.prefs  vcpkg.json  weather_demo.sln  weather_demo.vcxproj  weather_demo.vcxproj.filters  weatherkeys.keyinfo
src/: API.cpp  API.h  Location.cpp  Location.h  StorageManager.cpp  StorageManager.h  UI.cpp  UI.h  Utils.cpp  Utils.h  main.cpp
tests/: Test.cpp
weather_demo/x64/Debug/: vc143.idb  weather_demo.exe.recipe
weather_demo/x64/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
weather_demo/x64/Debug/weather_demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
